# LUMIN

./: .gitignore  README.md  napari.yaml  setup.cfg
configs/: settings.csv
environments/: environment-macos.yml  environment-windows.yml
image_stacking/: stack_images.py
lumin/: __init__.py  _widget.py  activity.py  napari.yaml  plot.py  preprocess.py  segmentation.py  utils.py
