[metadata]
name = LUMIN
version = 0.0.1
classifiers =
    Framework :: napari

#[options]
#packages = find:
##include_package_data = True
#i#nstall_requires =
#    napari

[options.entry_points]
napari.manifest =
    LUMIN = lumin:napari.yaml

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    stardist>=0.8.3
    tensorflow<2.11; platform_system!="Darwin" or platform_machine!="arm64"
    tensorflow-macos; platform_system=="Darwin" and platform_machine=="arm64"
    tensorflow-metal; platform_system=="Darwin" and platform_machine=="arm64"
    napari[all]
    cellpose==3.1.1.1
    numpy<=1.24.2; platform_system!="Darwin" or platform_machine!="arm64"
    numpy<2.0.0; platform_system=="Darwin" and platform_machine=="arm64"
    pandas
    magicgui
    scikit-image
    scikit-learn
    scipy
    matplotlib
    seaborn
    natsort
    opencv-python-headless
    napari-blob-detection==0.0.2
    pca
    csbdeep
    notebook
    ipykernel